objects/Manifest__c.object
<CustomObject   >
    <fields>
        <fullName>Component_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component History</label>
        <referenceTo>Component_History__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metadata_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Item</label>
        <referenceTo>Metadata_Item__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patchs</label>
        <referenceTo>Patch__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Manifest</label>
    <nameField>
        <displayFormat>MN-{MM}-{DD}-{YY}-{000}</displayFormat>
        <label>Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>